# src/types/documents/admin.document.ts
@@ -1,0 +1,8 @@
+import { Document } from 'mongoose';
+
+export interface IAdmin extends Document {
+	_id: string;
+	Name: string;
+	Email: string;
+	Password: string;
+}
